# Informational-Dynamics-of-Metatime

./: AGENT.md  AGENT3.md  MERGE_MANIFEST.md  POSTULATES_CANON_PL_EN.md  PRUNED_EXACT_DUP_FILES_REMOVED_REPORT.json  PRUNED_NO_DUP_FOLDERS_REPORT.json  README.md
CIEL_OMEGA_COMPLETE_SYSTEM/: CANONICAL_BUILD_MANIFEST.md
NONLOCAL_REPO_HYPERSPACE/: README.md  registry.yaml
TODO/: README.md
ciel_omega/: MEMORY_SECTOR_MANIFEST.md  __init__.py  coriolis_cymatics.py  demo_m5_affective_memory.py  demo_m6_identity_memory.py  demo_memory_system.py  demo_vocabulary_resolve.py  phase_sweep_analysis.py  test_affective_memory.py  test_alignment_strengthening.py  test_grid_stability.py  test_m6_1_acceptance.py  test_semantic_memory.py  unified_system.py  vocabulary.yaml
comparison_reports/: SUMMARY.md  cleaned_canon_inventory.tsv  summary.json
comparison_reports_forensic/: archived_items_found.tsv  clean_inventory.tsv  removed_items.tsv  summary.json
comparison_reports_last_merge/: SUMMARY.md  added_from_master_and_latest.tsv  canon_base_duplicates_by_name.tsv  canon_base_inventory.tsv  master_nonlocal_duplicates_by_name.tsv  master_nonlocal_inventory.tsv  merged_inventory.tsv  summary.json
comparison_reports_recovery/: live_only_vs_recovered.tsv  recovered_fixed_all_6_inventory.tsv  recovered_vs_live_diffs.tsv
integrations/: README.md  (+8 more)
omega/Informational-Dynamics-of-Metatime/TODO/external_references/ciel_rh_control_mini_repo/: pyproject.toml
omega/Informational-Dynamics-of-Metatime/TODO/external_references/ciel_rh_control_mini_repo/ciel_rh_control/: models.py
(+908 files in other folders)
